--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-standard": "^4.0.1",
     "typescript": "^4.9.5"
   }
 }
