--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^4.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
     "typescript": "^4.9.5"
   }
 }
