--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
     "rules": {
         "@typescript-eslint/strict-boolean-expressions": "off",
         "@typescript-eslint/key-spacing": "off",
-        "@typescript-eslint/consistent-type-imports": "off"
+        "@typescript-eslint/consistent-type-imports": "off",
+        "@typescript-eslint/return-await": "off",
+        "@typescript-eslint/no-confusing-void-expression": "off"
     }
 }
