--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,5 +1,6 @@
 {
     "hooks": {
-      "pre-commit": "npm run test:coverage"
+      "pre-commit": "lint staged",
+      "pre-push": "npm run test:ci"
     }
 }
